Requisitos 5 a 7 - Requisito 8 a verificar

--- a/index.html
+++ b/index.html
@@ -12,29 +12,32 @@
             <h1 id="titulo">Titulo</h1>
         </header>
         <img id="minha_foto" src="lucas_araujo.png" alt="minha_foto">
+        <ol id="licoes_aprendidas" type="1">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Python</li>
+            <li>Matlab</li>
+            <li>JavaScript</li>
+            <li>Fundamentos</li>
+            <li>n1</li>
+            <li>n2</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>m1</li>
+            <li>m2</li>
+            <li>m3</li>
+            <li>m4</li>
+            <li>m5</li>
+            <li>m6</li>
+            <li>m7</li>
+            <li>m8</li>
+            <li>m9</li>
+            <li>m10</li>
+        </ul>
+        <a href="https://www.google.com" target="_blank">pesquisar</a>
+        <article>Ate a data da realizacao do projeto lessons learned, foi aprendido conteudo relacionado a html, css, git e github, assim como o funcionamento da janela de comandos e principais comandos. A parte de organizacao utilizando o git e algo que tenho utilizado bastante, dentro e fora da trybe, um recursso muito util. O conhecimento adquirido relacionado a html eu pretendo utiliza-lo em um projeto fora da trybe logo mais.</article>
+        <footer id="rodape">ola</footer>
     </body>
-    <ol id="licoes_aprendidas" type="1">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Python</li>
-        <li>Matlab</li>
-        <li>JavaScript</li>
-        <li>Fundamentos</li>
-        <li>n1</li>
-        <li>n2</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>m1</li>
-        <li>m2</li>
-        <li>m3</li>
-        <li>m4</li>
-        <li>m5</li>
-        <li>m6</li>
-        <li>m7</li>
-        <li>m8</li>
-        <li>m9</li>
-        <li>m10</li>
-    </ul>
 </html>
