--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             </ul>
         </section>
 
+        <section>
+            <footer id="rodape">
+                <h2>Página Construída por Everton Curti</h2>                
+            </footer>
+        </section>
+
         
         
 
