--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <section id="cabecalho">
+        <header>            
+            <nav id="cabecalho">
                 <a href="index.html">Home</a>
                 <a href="https://www.linkedin.com/in/victorschlichting/" target="_blank">Contato</a>
-            </section>           
+            </nav>         
                 <h1 id="titulo">Project Lessons Learned - Victor Hugo Baum Schlichting</h1>
         </header>
         <main>
-            <img id="minha_foto" src="imagens/perfil.jpeg" alt="foto-victor-schlichting">
+            <aside>
+                <img id="minha_foto" src="imagens/perfil.jpeg" alt="foto-victor-schlichting">
+            </aside>
+            <article id="aprendizado">
+                <h2>Meu aprendizado</h2>
+                <p>Meu estudo na Trybe se iniciou com o Unix, aprendi que ele é a base para conseguir ser um bom profissional e atuar na área de desenvolvimento. Passei por Git e Github entendendo seu processo e uso para projetos com grandes equipes e como ele pode salvar a sua pele caso cometa algum erro. Atualmente estou na etapa de HTML e CSS, e este projeto tem o objetivo de testar meu conhecimento adquirido até aqui.</p>
+            </article>
             <ol id="licoes_aprendidas">
                 <h2>Lições aprendidas:</h2>
                 <li>Unix</li>
@@ -41,6 +47,7 @@
                 <li>NodeJS</li>
                 <li>Phyton</li>
             </ul>
+            
         </main>
         <footer id="rodape">
             <p>Rodapé</p>
