teste para verificar se resolver a questão da barra.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   <title>Project - Lessons Learned</title>
 </head>
 <body>
-  <header class="cabecalho"> 
-      <h1 class="titulo">Lições Aprendidas! - Trybe - Projeto</h1>
+  <header id="cabecalho"> 
+      <h1 id="titulo">Lições Aprendidas! - Trybe - Projeto</h1>
   </header>
   <main>
     <div>
       <img class="minha_foto" src="https://ialamov.github.io./images/WhatsApp%20Image%202021-03-02%20at%2015.09.07.jpeg" alt="Foto de perfil de Douglas Ialamov">
+      <a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/">Linkedin Pessoal</a>
     </div>
     <section>
-      <ol class="licoes_aprendidas">
+      <h2>Lições aprendidas</h2>
+      <ol id="licoes_aprendidas">
         <li>HTML</li>
         <li>Tags</li>
         <li>Semântica</li>
@@ -28,7 +30,8 @@
         <li>Unix & Bash</li>
         <li>Git, Github e Internet</li>
       </ol>
-      <ul class="licoes_aprendidas">
+      <h2>Lições que desejo aprender</h2>
+      <ul>
         <li>Rest</li>
         <li>JavaScript</li>
         <li>Flexbox</li>
@@ -41,10 +44,12 @@
         <li>Deployment</li>
       </ul>
     </section>
-    <a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/">Linkedin Pessoal</a>
+    <article>
+      <h3></h3>
+    </article>
+  </main>
   <footer class="rodape">
     <h4>Produzido por Douglas de Oliveira Ialamov</h4>
   </footer>
-  </main>
 </body>
 </html>
