--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         <li>Confiar</li>
     </ol>
 
+    <table class="margem">
+        <tr>
+            <th>bloco 1</th>
+            <th>bloco 2</th>
+            <th>bloco 3</th>
+        </tr>
+        <tr>
+            <td>Unix & bash</td>
+            <td>Git e GitHub</td>
+            <td>Html e Css</td>
+        </tr>
+    </table>
+
     <article class="margem">Iniciei meus estudo em programação por conta da trybe, conheci a escola através de uma propaganda no instagram, na verdade <br>
         meu irmão que trabalha com ciência de dados já havia me falado dela. Quando passei a ter um contato real com a escola pude encontrar<br>
          nela um ambiente seguro, que vem tornando meu aprendizado cada vez mais tranquilo. Os primeiros dias foram de muito desconforto, pois<br>
