--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
 
     <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas</h1>
+        <h1 id="titulo">Lições aprendidas na Trybe</h1>
 
         <nav>
-            <ul>
+            <ul class="nav-principal">
                 <li>Início</li>
                 <li>Artigos</li>
                 <li>Contato</li>
