--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </ul>
     </section>
     
-    <footer id="rodape"></footer>
+    <footer id="rodape">
+        <a href="https://www.betrybe.com/" target="_blank">Blog da Trybe</a>
+    </footer>
 
         
 </body>
