--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Lessons Learned</title>
 </head>
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned - Trybe</h1>
+    <nav>
+      <a target="_blank" href="https://samuel5g.github.io">Portfolio</a>
+      <a target="_blank" href="https://linkedin.com/in/samuel5g">LinkedIn</a>
+      <a target="_blank" href="https://github.com/samuel5g">GitHub</a>
+    </nav>
   </header>
 
   <main>
     <figure><img id="minha_foto" src="me.jpg" alt="Foto de rapaz sorrindo"></figure>
-    <a target="_blank" href="https://samuel5g.github.io">Confira meu portfolio</a>
 
     <section>
       <ol id="licoes_aprendidas">
@@ -43,6 +47,18 @@
         <li>Estruturas de Dados</li>
       </ul>
     </section>
+
+    <article>
+      <section>
+        <h2>Meu aprendizado</h2>
+      <p>Na Trybe, todo conhecimento é lucro! As coisa que aprendo, as formas como aprendo, as pessoas que me instruem... tudo tem sido muito satisfatório. A confiança e a certeza de que o meu dinheiro foi bem investido vem aumentando com o tempo que eu invisto aprendendo o que eles passam e conhecendo novas pessoas, que também é essencial para minha formação como desenvolvedor. Espero aprender ainda muito mais sobre as diversas tecnologias que eles ensinam, e sair formado trabalhando no meu sonho: ser um Desenvolvedor!</p>
+      </section>   
+    </article>
+
+    <aside>
+      <h2>Primeiro Commit</h2>
+      <p>Quando aprendi Git e GitHub foi um nó na cabeça! Até conseguir aplicar tudo que li, tive que criar, apagar, e recriar muitos repositórios. Mas com certeza o resultado foi recompensador.</p>
+    </aside>  
   </main>
 
   <footer id="rodape">
