--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ol>
     </section>
     <section class="lista-nao-ordenada">
-        <ul>
+        <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>Testes Unitários</li>
             <li>Funções</li>
@@ -43,6 +43,14 @@
             <li>Estrutura de dados</li>
         </ul>
     </section>
+    <div class="content">
+        <section>
+            <article>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ea corrupti illum quis mollitia voluptatum obcaecati veritatis non recusandae cumque! Quae aliquid impedit ab deserunt! Quaerat incidunt voluptates sequi nisi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, fugit dignissimos! Sint harum facere dolore accusantium modi beatae quibusdam eveniet maiores facilis aliquid excepturi adipisci expedita, suscipit deleniti cupiditate neque.</p>
+            </article>
+        </section>
+
+    </div>
 
     <footer id="rodape">
         "Conteúdo compilado por "Juan Morallys", <08/2021>".
