req 02 ok, req 03 ~, adicionados foto e favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Projeto - 01</title>
 </head>
 <body>
+    <!-- Requisito 01 - OK -->
+    <!-- Requisito 02 - -->
+    <div class="barra-superior">
+        <header id="cabecalho">
+            <h1 id="titulo">Barra Superior</h1>
+        </header>
+    </div>
+
+    <!-- Requisito 03 -  -->
+    <img id="minha_foto" src="pp.jpg" alt="minha foto">
     
 </body>
 </html>
