--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
       <li>dddd</li>
       <li>dddd</li>
     </ul>
+
+    <a href="https://www.betrybe.com/" target="_blank"></a>
+
+    <article>
+      <title>
+        <h3>Título</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam viverra hendrerit felis at porta. Duis rutrum tempor ex quis dignissim. Morbi egestas ante mi, eget elementum felis aliquet posuere. Nunc mollis viverra tempor. Nam sodales sem nec elementum facilisis. Nulla ut faucibus diam. Proin eleifend, sapien sed placerat volutpat, leo lacus varius lectus, vitae tristique ipsum justo quis mi. Maecenas consectetur erat erat, dapibus euismod enim gravida nec. Cras ut velit nisi.</p>
+      </title>
+
+    </article>
   </main>
 
   <footer id="rodape">
