--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <header id="cabecalho">
         <h1 id="titulo">Aprendizado - Trybe</h1>
     </header>
+    <main>
+        <article>
+            <section>
+                <img id="minha_foto" src="pp.jpeg" alt="Uma foto minha andando de bicicleta na serra da prainha">
+            </section>
+        </article>
+    </main>
 </body>
 </html>
