Requisito 8 completo - Requisito 9 a verificar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </ul>
         <a href="https://www.google.com" target="_blank">pesquisar</a>
         <article>Ate a data da realizacao do projeto lessons learned, foi aprendido conteudo relacionado a html, css, git e github, assim como o funcionamento da janela de comandos e principais comandos. A parte de organizacao utilizando o git e algo que tenho utilizado bastante, dentro e fora da trybe, um recursso muito util. O conhecimento adquirido relacionado a html eu pretendo utiliza-lo em um projeto fora da trybe logo mais.</article>
+        <aside>Os momentos de interacao em grupos sempre sao enriquecedores. Conssegui identificar alguns erros meus com relacao a coordenar e liderar um grupo que vao me ajudar futuramente.</aside>
         <footer id="rodape">ola</footer>
     </body>
 </html>
