--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Lessons Learned</title>
 </head>
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Projeto01</h1>
     </header>
     <section>
-        <img src="" alt="">
+        <img id="minha_foto" src="image_Profile.jpg" alt="">
+        <a href="https://github.com/Eglany" target="_blank">GitHub</a>
         <h2>Lições</h2>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
@@ -25,7 +27,7 @@
             <li>Inspect</li>
             <li>Semantic HTML</li>
         </ol>
-        <ol id="licoes_a_aprender">
+        <ul id="licoes_a_aprender">
             <li>JavaScript</li>
             <li>DOM</li>
             <li>Forms</li>
@@ -36,9 +38,17 @@
             <li>React</li>
             <li>Node</li>
             <li>SQL</li>
-        </ol>
+        </ul>
     </section>
+    <article>
+        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado.</p>
+    </article>
+    <aside>
+        <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.</p>
+    </aside>
+    <footer id="rodape">
 
+    </footer>
     
 </body>
 </html>
