--- a/index.html
+++ b/index.html
@@ -68,5 +68,23 @@
       <p> O meu primeiro projeto na Trybe, se chamou "lessons-leaned". Neste, fui responsável por montar um site do zero, seguindo diversas regras que me desafiava a todo instante. Se você quiser enfrentar isso também, acesse o site da Trybe e se inscrevendo. </p>
     </aside>
   </section>
+  <!--12. link uma tabela à página-->
+  <section>
+    <h2>O que você irá aprender na Trybe?</h2>
+    <p>A Trybe possui o foco de desenvolver um programador, principalmente Web. O curso é divido em módulo, onde cada um apresenta diversos conteúdos que serão aprendidos a cada dia. Na tabela abaixo, encontra-se quais são esses blocos:</p>
+    <table>
+      <tr>
+        <th>Ordem</th>
+        <th>Módulo</th>
+      </tr>
+      <tr>
+        <td>Fundamentos</td>
+        <td>Front-End</td>
+        <td>Back-End</td>
+        <td>Ciência da Computação</td>
+      </tr>
+      <legend>Módulos Trybe</legend>
+    </table>
+  </section>
 </body>
 </html>
