--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
         e um dos momentos que mais me impactou foi o de simpatia e empatia que trouxe <br>
         a diferença dos dois.</p>
     </aside>
+    <div>
+    <h2>Périodo de aprendizado do curso</h2>
+    <table>
+        <tr>
+            <th>inicio</th>
+            <th>final</th>
+        </tr>
+        <tr>
+            <td>09/08/2021</td>
+            <td>09/08/2022</td>
+        </tr>
+    </table>
+    </div>
+    
     <footer id="rodape"></footer>
 </body>
 </html>
