--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li>SQL</li>
         </ul>
 
-        <article>
+        <article class="lado-esquerdo">
           <p>
             Aprendi sobre o Git e seu versionamento de código, utilizo ele frequentemente na minha instituição.
             e ele serve como base para quando começar a trabalhar, onde será usado frequentemente.    
@@ -59,7 +59,7 @@
         </article>
         
         <aside>
-          <section>
+          <section class="lado-direito">
             <p>Estudei horas depois das aulas para poder aprender o que eu tenho hoje, mesmo antes ja sabendo a criar um site
             eu ainda não aprendi o suficiente</p>
           </section>
