--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
         <header id="cabecalho">
                 <h1 id="titulo">Título</h1>
         </header>
+
         <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
-        <ul id="licoes_aprendidas">
+        <br>
+        <h3>Lições aprendidas</h3>
+        <ol id="licoes_aprendidas">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+            <li>Item 5</li>
+            <li>Item 6</li>
+            <li>Item 7</li>
+            <li>Item 8</li>
+            <li>Item 9</li>
+            <li>Item 10</li>
+        </ol>
+        <br>
+        <h3>Lições a aprender</h3>
+        <ul id="licoes_a_aprender">
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
