--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,600;1,400&display=swap"
-    rel="stylesheet">
-
 </head>
 
 <body>
   <header>
-    <div id="cabecalio">
-      <h1 id="Titulo">Lições Aprendidas</h1>
+    <div id="cabecalho">
+      <h1 id="titulo">Lições Aprendidas</h1>
     </div>
     <div>
       <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
@@ -25,7 +22,7 @@
     </div>
   </header>
 
-  <ol id="licoes_aprendidas">
+  <ol id="licoes_a_aprender">
     <li>Git</li>
     <li>GitHub</li>
     <li>Unix</li>
