--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="#artigo">Artigo</a></li>
       <li><a href="#licoes_aprendidas">Lições Aprendidas</a></li>
       <li><a href="#licoes_a_aprender">Lições a Aprender</a></li>
+      <li><a href="#contatos">Contato</a></li>
     </ul>
   </nav>
   <img id="minha_foto" src="fredi-wilkens.jpeg" alt="foto de Frederico Wilkens de frente e sorrindo">
@@ -55,6 +56,23 @@
     </ul>
   </section>
   <footer id="rodape">
+    <table id="contatos">
+      <tr>
+        <th>Contato</th>
+      </tr>
+      <tr>
+        <td>Celular</td>
+        <td>(51)981227113</td>
+      </tr>
+      <tr>
+        <td>Email</td>
+        <td>frediwilkens@gmail.com</td>
+      </tr>
+      <tr>
+        <td>Instagram</td>
+        <td><a href="https://www.instagram.com/frediwilkens/" target="_blank">@frediwilkens</a></td>
+      </tr>
+    </table>
     <a href="https://www.linkedin.com/in/frederico-wilkens/" target="_blank">Linkedin</a>
   </footer>
 
