Requisito 11 e correcao do requisito 9

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Lessons Learned</title>
   </head>
@@ -13,7 +15,7 @@
         <h2>Eu, Natã!</h2>
         <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
         <nav>
-          <a href="https://linkedin.com/in/nataelienai" target="_blank">Natã Elienai</a>
+          <a href="https://linkedin.com/in/nataelienai" target="_blank">LinkedIn: Natã Elienai</a>
         </nav>
       </section>
       <section>
@@ -57,7 +59,7 @@
       </section>
       <aside>
         <h2>Um breve resumo</h2>
-        <p>Iniciei a minha jornada na Trybe já aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Logo depois passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual, que trata de HTML e CSS.</p>
+        <p>Iniciei na Trybe aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Depois, passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual sobre HTML e CSS.</p>
       </aside>
     </main>
     <footer id="rodape">
