Requisito 9 completo - Requisito 10 a verificar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <header id="cabecalho">
             <h1 id="titulo">Titulo</h1>
         </header>
+        <nav>
+            por enquanto nada
+        </nav>
         <img id="minha_foto" src="lucas_araujo.png" alt="minha_foto">
         <ol id="licoes_aprendidas" type="1">
             <li>HTML</li>
@@ -37,8 +40,17 @@
             <li>m10</li>
         </ul>
         <a href="https://www.google.com" target="_blank">pesquisar</a>
-        <article>Ate a data da realizacao do projeto lessons learned, foi aprendido conteudo relacionado a html, css, git e github, assim como o funcionamento da janela de comandos e principais comandos. A parte de organizacao utilizando o git e algo que tenho utilizado bastante, dentro e fora da trybe, um recursso muito util. O conhecimento adquirido relacionado a html eu pretendo utiliza-lo em um projeto fora da trybe logo mais.</article>
-        <aside>Os momentos de interacao em grupos sempre sao enriquecedores. Conssegui identificar alguns erros meus com relacao a coordenar e liderar um grupo que vao me ajudar futuramente.</aside>
-        <footer id="rodape">ola</footer>
+        <article>
+            Ate a data da realizacao do projeto lessons learned, foi aprendido conteudo relacionado a html, css, git e github, assim como o funcionamento da janela de comandos e principais comandos. A parte de organizacao utilizando o git e algo que tenho utilizado bastante, dentro e fora da trybe, um recursso muito util. O conhecimento adquirido relacionado a html eu pretendo utiliza-lo em um projeto fora da trybe logo mais.
+        </article>
+        <aside>
+            Os momentos de interacao em grupos sempre sao enriquecedores. Conssegui identificar alguns erros meus com relacao a coordenar e liderar um grupo que vao me ajudar futuramente.
+        </aside>
+        <section>
+            por enquanto nada
+        </section>
+        <footer id="rodape">
+            por enquanto nada
+        </footer>
     </body>
 </html>
