--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ea corrupti illum quis mollitia voluptatum obcaecati veritatis non recusandae cumque! Quae aliquid impedit ab deserunt! Quaerat incidunt voluptates sequi nisi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, fugit dignissimos! Sint harum facere dolore accusantium modi beatae quibusdam eveniet maiores facilis aliquid excepturi adipisci expedita, suscipit deleniti cupiditate neque.</p>
             </article>
         </section>
-
     </div>
+
+    <section>
+        <aside>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus accusamus vero magni ab? Optio ipsam magni quas? Ipsa suscipit unde labore. A deleniti illum dicta quaerat velit veniam minima vel!</p>
+            
+        </aside>
+    </section>
 
     <footer id="rodape">
         "Conteúdo compilado por "Juan Morallys", <08/2021>".
