--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <img src="foto.jpg" alt="uma foto minha" id="minha_foto">
 
-    <h2>Lições</h2>
+    <h2 class="text-center">Lições</h2>
     <div class="lists">
       <ol id="licoes_aprendidas">
         <li>Unix & Bash</li>
@@ -43,13 +43,23 @@
       </ul>      
     </div>
 
-    <h2>Meus Aprendizados</h2>
-    <article>
-      Eu já possuo varias habilidades tecnicas, então o que está 
-      mais me agregando são a parte de Soft Skills, mas também tem muita 
-      coisa que eu não sabia na parte das Hard Skills (Parte tecnica).
-      Saindo das habilidades, estou gostando bastante também da comunidade da Trybe.
-    </article>
+    <h2 class="text-center">Meus Aprendizados</h2>
+    <div class="aprendizados">
+      <article class="lado-esquerdo">
+        Eu já possuo varias habilidades tecnicas, então o que está 
+        mais me agregando são a parte de Soft Skills, mas também tem muita 
+        coisa que eu não sabia na parte das Hard Skills (Parte tecnica).
+        Saindo das habilidades, estou gostando bastante também da comunidade da Trybe.
+      </article>
+  
+      <section class="lado-direito">
+        <aside>
+          <h3 class="text-center">Passagem pelo aprendizado</h3>
+          Ante de começar programar meu foco era no mercado 
+          digital trabalhando com marketing e estratégias de vendas
+        </aside>
+      </section>
+    </div>
   </div>
   <footer class="text-center" id="rodape">
     <p>
