--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <li>Zoom</li>
      <li>Empatia</li>
     </ol>
-    <ul>
+    <ul id="licoes_a_aprender">
         <li>Reatc</li>
         <li>UnitTests</li>
         <li>ES6</li>
