--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <li>Lógica</li>
         </ul>
     </section>
+
+    <article>
+        <h3>Meu aprendizado</h3>
+        <p>Entrei na Trybe sem saber nada sobre o mundo da programação (além do que aprendi no curso introdutório), agora estou na segunda semana de curso e tendo muitos aprendizados, desde hard skills, como Unix, Bash, Git, GitHub, HTML e CCS, até softskills, como inteligência emocional, empatia, dentre vários outros que ainda estão por vir.</p>
+    </article>
     
     <footer id="rodape">
         <a href="https://www.betrybe.com/" target="_blank">Blog da Trybe</a>
