--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <li>SQL</li>
         </ul>
 
+        <article class="artigo_apremdizado">
+            <h3>Meu aprendizado na Trybe!</h3>
+            <p>
+                O aprendizado que estou tendo na Trybe está sendo incrível, até mesmo antes de me tornar aluno já estava aprendendo. O curso introdutório deu para ter um pouco de dimensão do era a Trybe, o processo seletivo foi bem acolhedor, e claro, os dois primeiros dias foram mais acolhedores ainda. <br>
+                Começamos aprendendo sobre unix e bash, logo em seguida ficamos feras em git e gitHub, estamos estudando atualmente Html e CSS, nesse período também tivemos momentos de interações com os colegas de curso e momento de soft skills onde começamos a aprender sobre inteligência emocional.
+            </p>
+        </article>
     </main>
 
     <footer id="rodape">
