--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
           <li>CSS</li>
         </ol>  
        </h2>
-  </div>     
+  </div> 
+  <div>
+      <h2>
+          <ul id="licoes_a_aprender">
+              <li>Lógica de Programação</li>
+              <li>javaScript</li>
+              <li>DOM</li>
+              <li>Web Storage</li>
+              <li>HTML avançado</li>
+              <li>CSS avançado</li>
+              <li>javaScript ES6</li>
+              <li>Higher Order Functions do javaScript ES6</li>
+              <li>javaScript Assincrono</li>
+              <li>Promises</li>
+          </ul>
+      </h2>
+  </div>  
+    
 </body>
 </html>
