sexto e setimo requisitos concluidos com sucesso

--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
       </ul>
     </section>
   </main>
+  <footer id="rodape">
+    <a class="link_redes_sociais" href="https://github.com/orlandodantas" target="_blank"><img src="img/github.png" alt="gatinho do GitHub"></a>
+    <a class="link_redes_sociais" href="https://www.linkedin.com/in/orlando-dantas/" target="_blank"><img src="img/Linkedin.png" alt="I do Linkedin"></a>
+  </footer>
 </body>
 </html>
