--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned - Trybe</h1>
+        <nav>
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>Login</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <article>
-            <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
+            <img id="minha_foto" src="./myimage.jpg" alt="Minha foto">
             <a href="https://github.com/KevinSena" target="_blank">Kevin Sena</a>
             <h3>Artigo</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit saepe modi ea, quis quaerat incidunt vel enim necessitatibus ad? Non molestiae, sapiente veniam facere nostrum temporibus eos? Et, ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum hic similique magni corporis? Fuga quos quo, similique rem fugiat cumque optio molestiae veritatis cupiditate nulla iusto eligendi quia, ducimus error!</p>
