terminando todos os requisitos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <header id="cabecalho"> <h1 id="titulo"> Danilo Couto</h1></header>
+    <header id="cabecalho"> <h1 id="titulo"> Lições Aprendidas por Danilo Couto</h1></header>
 
     <nav>
         <a href="#sobre">Sobre</a>
@@ -19,9 +19,11 @@
 
 <img id="minha_foto" src="/sd-016-b-project-lessons-learned/Images/Danilo-Couto.jpeg" alt="eu, Danilo Couto">
 
-<section id="sobre">
+<div id="artigo_e_licoes">
+
+<section id="sobre"> Sobre
     
-    <article>
+    <article class="lado-esquerdo"> 
         <h2 >Meu processo de aprendizado</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque optio itaque, hic nesciunt molestiae. Fuga, voluptas ipsum! Velit non laborum iusto cum nulla, culpa ipsa omnis maxime rem enim!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque optio itaque, hic nesciunt molestiae. Fuga, voluptas ipsum! Velit non laborum iusto cum nulla, culpa ipsa omnis maxime rem enim!</p> 
@@ -29,8 +31,8 @@
 
 </section>
 
-<section id="listas">
-<ol id="licoes_aprendidas"> <h3>Lições Aprendidas</h3>
+<section id="listas" class="lado-direito" > Listas
+<ol id="licoes_aprendidas"> <h2>Lições Aprendidas</h2>
     <li></li>
     <li></li>
     <li></li>
@@ -43,7 +45,7 @@
     <li></li>
 </ol>
 
-<ul id="licoes_a_aprender"> <h3>Lições a Aprender</h3>
+<ul id="licoes_a_aprender"> <h2>Lições a Aprender</h2>
     <li></li>
     <li></li>
     <li></li>
@@ -57,18 +59,29 @@
 </ul>
 </section>
 
+</div>
 
-<aside id="trajetoria">
+<aside id="trajetoria"> Trajetoria
     <h2 >Minha trajetória</h2 >
     <ul > 
      <li > 
-       <a href="https://www.instagram.com/danilo_couto_/#" target="u_blank"> INSTAGRAM </a>      </li>
+       <a href="https://www.instagram.com/danilo_couto_/#" target="_blank"> INSTAGRAM </a>      </li>
      <li > 
-       <a href="https://www.youtube.com/channel/UCbpyRZtJ59Sqs6nBPzIZZ1A" target="u_blank">  YOUTUBE </a>  </li>
+       <a href="https://www.youtube.com/channel/UCbpyRZtJ59Sqs6nBPzIZZ1A" target="_blank">  YOUTUBE </a>  </li>
      <li >
-       <a href="https://www.linkedin.com/in/danilocouto/" target="u_blank"> LINKEDIN </a>  </li>
+       <a href="https://www.linkedin.com/in/danilocouto/" target="_blank"> LINKEDIN </a>  </li>
     </ul>
 </aside>
+
+
+<table id="tabela_spec">
+    <tr> <td>BLOCO</td><td>TÓPICO</td> </tr>
+    <tr> <td>linha 1</td><td>dados 1</td> </tr>
+    <tr> <td>linha 2</td><td>dados 2</td> </tr>
+    <tr> <td>linha 3</td><td>dados 3</td> </tr>
+    <tr> <td>linha 4</td><td>dados 4</td> </tr>
+
+</table>
 
 <footer id="rodape"></footer>
 
