--- a/index.html
+++ b/index.html
@@ -50,5 +50,10 @@
         </tr>
       </table>
     </nav>
+    <footer id="rodape">
+      <p>
+        Desenvolvido por <a href="https://github.com/fasouzarj">Flávio Alves</a>
+      </p>
+    </footer>
   </body>
 </html>
