--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <title>Documento</title>
 </head>
 <body>
-  <header id="cabeçalho">
+  <header id="cabecalho">
     <h1 id="titulo">Aplicando Conhecimento Aprendido</h1>
   </header>
+  <figure>
+    <img id="minha_foto" img src="/img/pic-perfil-light.png" alt="Minha Foto">
+  </figure>
 </body>
 </html>
