requisito05 - adicione uma lista de lições que ainda deseja aprender à página

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
       <li>Chrome Devoloper Tools</li>
       <li>Inteligência emocional</li>
     </ol>
+    <ul id="licoes_a_aprender">
+      <li>DOM</li>
+      <li>CSS responsivo</li>
+      <li>Javascript</li>
+      <li>Forms</li>
+      <li>Node</li>
+      <li>React</li>
+      <li>SQL</li>
+      <li>ES6</li>
+      <li>HOF</li>
+      <li>Unit Tests</li>
+    </ul>
     </main>
 </body>
 </html>
