--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         </section>
         
 
-        <article>
+        <article class="lado-esquerdo">
             <h2>O difícil - e maravilhoso - caminho para o aprendizado</h2>
             <p>Eu passei por muitos lugares até chegar onde estou hoje. Algumas pessoas são sortudas e descobrem desde cedo o que amam e o que querem fazer da vida, mas eu, infelizmente (ou felizmente), não fui uma delas. Dei algumas voltas até decidir que gostava tanto de tecnologia a ponto de querer estudar e fazer disso uma profissão.</p> 
             <p>Se eu me arrependo? Nem um pouco. Todo o conhecimento que eu puder adquirir ainda será pouco comparado ao tamanho da minha vontade de aprender.</p> 
         </article>
 
-        <aside>
+        <aside class="lado-direito">
             <p>A aprendizagem demanda tempo e disciplina, e isso eu só aprendi com o tempo - ou seja, errando e aprendendo. Esse processo é fundamental.</p>
         </aside>
 
-        <section>
+        <section class="soft_skills">
             <h2>Soft skills essenciais a serem desenvolvidas ao longo do tempo de Trybe</h2>
             <p>Nem só de técnica é feito um desenvolvedor. Para além dela, é essencial que um bom profissional possua soft skills que o diferenciem. O diferencial do curso de Desenvolvimento Web da Trybe é que, além das hard skills, temos a oportunidade de desenvolver competências sociemocionais fundamentais.</p>
             <table>
