--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <header id="cabecalho">
         <h1 id="titulo">O foguete está decolando! Lessons Learned: Meu primeiro projeto na Trybe</h1>
     </header>
+    <main>
+        <img id="minha_foto" src="https://media-exp1.licdn.com/dms/image/C4D03AQF7fz0gN2Sz3w/profile-displayphoto-shrink_800_800/0/1616434514508?e=1635379200&v=beta&t=E0P-UxT6X47WBe4B0BQR7gu-kaAvUzxfNZSUV968Fzg" alt="Fundo bege. Mulher cabelo vermelho, pele clara e blusa preta">
+    </main>
 </body>
 
 </html>
