--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <header id="cabecalho">
         <h1 id="titulo">Trabalho do Brunão</h1>
     </header>
-    <img src="imagens/eu.jpg" alt="eu" id="minha_foto">
+    <main id="main">
+        <section>
+            <img src="imagens/eu.jpg" alt="eu" id="minha_foto">
+            <section id="secao">
+                <h3>Lições aprendidas:</h3>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Semantic HTML</li>
+                    <li>Inspect</li>
+                    <li>Empatia</li>
+                </ol>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
-
