--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         
         <img id="minha_foto" src="/IMG_9102.jpg" alt="Foto de Everton Curti">
 
+        <nav class="portifolio">
+            <a href="https://everton-curti.github.io/" target="_blank">Everton Curti</a>
+        </nav>
+
         <section>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
