--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
       <img id="minha_foto" alt="Gabriel de casaco amarelo" src="foto.jpeg">
       <hr>
       <section>
+        <h2>Ensinamentos Trybe atá o momento!</h2>
+        <article>
+          <p>
+            Primeiro o Bash, responsável pela comunicação dev-máquina.
+            Em seguida temos o Git, uma plataforma de versionamento de código. Nos ajuda a ter um maior controle sobre o código conforme adicionamos mais conteúdo.
+            Temos também o GitHub, um repositório remoto onde esses códigos são salvos.
+            Então ao HTML e CSS, responsáveis pela criação de websites. O Html é uma linguagem de marcação de texto, responsável pelo conteúdo visual que queremos na página.
+            O CSS por sua vez é responsável pela estilização da página.
+          </p>
+        </article>
+      </section>
+      <section>
         <div>
           <h2>Lições Aprendidas</h2>
           <ol id="licoes_aprendidas">
