Inserindo comentários sobre requisitos

--- a/index.html
+++ b/index.html
@@ -6,15 +6,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Requisito 2 -->
     <header id="cabecalho">
         <h1 id="titulo">Primeiro Projeto - Trybe</h1>
+
+        <nav>
+            <ul>
+                <li>Aprendizado</li>
+                <li></li>       
+            </ul>
+        </nav>
+
     </header>
+    <!-- Requisito 3 -->
     <section>
         <img id="minha_foto" src="project-img.jpg" alt="Foto de Juan Morallys em CampinaGrande-PB">
     </section>  
     
+    <!-- Requisito 7 -->
     <a href="https://www.linkedin.com/in/juanmorallys/">LinkedIn</a>
     
+    <!-- Requisito 4 -->
     <section class="lista-ordenada">
         <ol id="licoes_aprendidas">
             <li>Unix</li>
@@ -29,6 +41,7 @@
             <li>Como funciona a internet</li>
         </ol>
     </section>
+    <!-- Requisito 5 -->
     <section class="lista-nao-ordenada">
         <ul id="licoes_a_aprender">
             <li>JavaScript</li>
@@ -43,6 +56,7 @@
             <li>Estrutura de dados</li>
         </ul>
     </section>
+    <!-- Requisito 8 -->
     <div class="content">
         <section>
             <article>
@@ -50,7 +64,7 @@
             </article>
         </section>
     </div>
-
+    <!-- Requisito 9 -->
     <section>
         <aside>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus accusamus vero magni ab? Optio ipsam magni quas? Ipsa suscipit unde labore. A deleniti illum dicta quaerat velit veniam minima vel!</p>
@@ -58,6 +72,7 @@
         </aside>
     </section>
 
+    <!-- Requisito 6 -->
     <footer id="rodape">
         "Conteúdo compilado por "Juan Morallys", <08/2021>".
     </footer>
