todos os testes com sucesso

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>Orientação à objetos</li>
             <li>Python</li>
         </ul>
-        <article id="artigo">
+        <article id="artigo" class="lado-esquerdo">
             <p>O curso na <b>Trybe</b> tem se mostrado a melhor escolha que eu fiz nos 
                 ultimos tempos. Os professores são ótimos, a didática perfeita e é dado ao
                 aluno a oportunidade de realmente aprender com os melhores.</p>
@@ -49,7 +49,7 @@
             </p>
                           
         </article>
-        <aside id="lateral">
+        <aside id="lateral" class="lado-direito">
             O aprendizado não é moleza! Todo o dia têm muito conteúdo e exercícios. É necessário
             sempre dedicação do aluno pra conseguir se manter a par de todo o conteúdo apresentado.
         </aside>
@@ -72,7 +72,7 @@ https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/table
     </table>
     <footer id="rodape">
         <nav> <b><a href="https://www.github.com/leboralli" 
-        id="link-externo">Github</a> </b>
+        id="link-externo" target="_blank" >Github</a> </b>
         </nav>    
     </footer>
 </body>
