--- a/index.html
+++ b/index.html
@@ -43,21 +43,23 @@
             <li>SQL</li>
          </ul>
     </main>
-    <article>
+<table> <tr>
+    <td class="lado-esquerdo"><article>
         <h2>Artigo</h2>
         <p>
-            Faz quinze dias que comecei a estudar na Trybe e está sendo bem desafiador para mim, e eu acredito que o fundamento de HTML e CSS são só a ponta do iceberg.>br>Estou bem animado para começar a aprender JavaScript e Python que são linguagens de programação bem conhecidas, sei que sera muito mais desafiador, mas sei que vai valer a pena para quando eu querer entrar no mercado de trabalho no modulo 29.
+            Faz quinze dias que comecei a estudar na <em>Trybe</em> e está sendo bem desafiador para mim, e eu acredito que o fundamento de HTML e CSS são só a ponta do iceberg. Estou bem animado para começar a aprender JavaScript e Python que são linguagens de programação bem conhecidas, sei que sera muito mais desafiador, mas sei que vai valer a pena para quando eu querer entrar no mercado de trabalho no modulo 29.
         </p>
-    </article>
-    <aside>
+    </article></td>
+    <td class="lado-direito"><aside>
         <h2>Passagem</h2>
         <p>
             Sempre fui uma pessoa que gostei muito de aprender, M-A-S aprender o que eu queria e não ia muito bem nas matérias obrigatórias.
         </p>
-    </aside>
+    </aside></td>
+</tr></table>
     <footer id="rodape">
-        Quem codou essa página se encontra nesse <a href="https://www.linkedin.com/in/hiago-briano/" target="_blank">Linkedin</a>
+        Quem codou essa página se encontra nesse <a href="https://www.linkedin.com/in/hiago-briano/" target="_blank">Linkedin.</a>
     </footer>
-    
+
 </body>
 </html>
