Um pouco de estilo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <main>
+        <header id="cabecalho">
+            <h1>Lessons Learned</h1>
+        </header>
         <img id="minha_foto" src="minhafoto.jpeg" alt="victor calidor">
         <section>
             <div>
@@ -27,18 +30,18 @@
                 </ol>
             </div>
             <div>
-                <h2>Lições aprendidas:</h2>  
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <h2>Lições a aprender:</h2>  
+                <ul id="licoes_a_aprender">
+                    <li>Javascript</li>
+                    <li>Dom</li>
+                    <li>Forms</li>
+                    <li>CSS responsive</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>SQL</li>
                 </ul>                
             </div>
         </section>
@@ -49,6 +52,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, repellat! Quidem doloribus cumque dolorem ex vitae voluptatibus ipsum numquam quibusdam sed? Obcaecati dolorum, maiores autem quisquam nobis in itaque doloribus.</p>
         </aside>
     </main>
-    <footer></footer>
+    <footer id="rodape">
+
+    </footer>
 </body>
 </html>
