--- a/index.html
+++ b/index.html
@@ -7,11 +7,45 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="título">Projeto Lessons Learned</h1>
+        <h1 id="título">Projeto Lessons Learned -<a href="https://www.betrybe.com/" target="_blank" >Trybe</a></h1>
     </header>
     <main>
-        <img id="minha_foto" src="eu.jpg" alt="Foto minha">
+        <section id="section-one">
+            <img id="minha_foto" src="eu.jpg" alt="Foto minha">
+            <ol id="licoes_aprendidas">
+                <h3>Lições aprendidas</h3>
+                <li>Aprendizado 1</li>
+                <li>Aprendizado 2</li>
+                <li>Aprendizado 3</li>
+                <li>Aprendizado 4</li>
+                <li>Aprendizado 5</li>
+                <li>Aprendizado 6</li>
+                <li>Aprendizado 7</li>
+                <li>Aprendizado 8</li>
+                <li>Aprendizado 9</li>
+                <li>Aprendizado 10</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <h3>Lições a aprender</h3>
+                <li>Aprendizado 1</li>
+                <li>Aprendizado 2</li>
+                <li>Aprendizado 3</li>
+                <li>Aprendizado 4</li>
+                <li>Aprendizado 5</li>
+                <li>Aprendizado 6</li>
+                <li>Aprendizado 7</li>
+                <li>Aprendizado 8</li>
+                <li>Aprendizado 9</li>
+                <li>Aprendizado 10</li>
+            </ul>
+        </section>
+        <section id="section-two">
+            <article id="article-one"><p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem IpsumLorem Ipsum</p></article>
+            <aside><p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p></aside>
+
+        </section>  
     </main>
+    <footer id="rodape"><p>Conteúdo compilado por Guilherme Andrade Rosa. Santos, 2021</p></footer>
     
 </body>
 </html>
