arquivo submetido ao npm test

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Validação de conhecimentos- TRYBER</h1>
+      <nav class="nav">
+        <ul>
+          <li><a href="#"></a>Home</li>
+          <li><a href="#"></a>Contato</li>
+        </ul>
+      </nav>
     </header>
 
     <main class="container">
@@ -38,39 +44,42 @@
       </div>
 
       <!-- about - Informações sobre o curso -->
-      <section class="lesson-learned">
-        <h2>Coisas que eu já aprendi ate aqui:</h2>
-        <ol id="licoes_aprendidas">
-          <li>Fundamentos do Desenvolvimento Web</li>
-          <li>Introdução - Unix & Shell</li>
-          <li>Unix & Bash</li>
-          <li>Introdução - Git & GitHub</li>
-          <li>Git</li>
-          <li>GitHub</li>
-          <li>Internet - Entendendo como ela funciona</li>
-          <li>Introdução - HTML & CSS</li>
-          <li>HTML - Estruturas de página</li>
-          <li>CSS - Primeiros passos em CSS</li>
-        </ol>
-      </section>
+      <div class="about-course">
+        <div class="lesson-learned">
+          <h2>Coisas que eu já aprendi ate aqui:</h2>
+          <ol id="licoes_aprendidas">
+            <li>Fundamentos do Desenvolvimento Web</li>
+            <li>Introdução - Unix & Shell</li>
+            <li>Unix & Bash</li>
+            <li>Introdução - Git & GitHub</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Internet - Entendendo como ela funciona</li>
+            <li>Introdução - HTML & CSS</li>
+            <li>HTML - Estruturas de página</li>
+            <li>CSS - Primeiros passos em CSS</li>
+          </ol>
+        </div>
 
-      <section class="to-do"> 
-        <h2>O que eu espero aprender</h2>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </section>
+        <div class="to-do">
+          <h2>O que eu espero aprender</h2>
+          <ul id="licoes_a_aprender">
+            <li>Javascript</li>
+            <li>Frameworks</li>
+            <li>Boas praticas</li>
+            <li>Inteligencia emocional</li>
+            <li>Fazer networking</li>
+            <li>Logica de programação</li>
+            <li>DOM</li>
+            <li>Eventos</li>
+            <li>Responsividade</li>
+            <li>Testes unitarios</li>
+          </ul>
+        </div>
+      </div>
 
-      <article class=lado-esquerdo>
+      <article class="lado-esquerdo">
+        <h3>Como é o aprendizado na Trybe</h3>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero
           beatae animi architecto, ullam at reiciendis laboriosam temporibus
@@ -82,14 +91,16 @@
         </p>
       </article>
 
-      <aside class="lado-direito">
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates
-          ut minima nam ipsum molestiae, odit porro? Eos officia sunt eligendi
-          quam inventore repellat, quis dolorum quod quidem fugiat impedit
-          recusandae.
-        </p>
-      </aside>
+      <section>
+        <aside class="lado-direito">
+          <h3>Um pouco da minha historia</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates
+            ut minima nam ipsum molestiae, odit porro? Eos officia sunt eligendi
+            quam inventore repellat, quis dolorum quod quidem fugiat.
+          </p>
+        </aside>
+      </section>
 
       <div class="clear"></div>
     </main>
