--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas - Trybe</h1>
+        <nav>
+            <a href="https://github.com/Grazziano" target="_blank">GitHub</a>
+        </nav>
     </header>
 
     <section id="foto_section">
